# dependency-injection-example

./: Makefile
introduction/: pyproject.toml
introduction/src/: __init__.py  main.py  simple_application.py
introduction/src/provider/: __init__.py  user_provider.py
introduction/src/repository/: __init__.py  user_repository.py
introduction/src/service/: __init__.py  user_service.py
movie-lister-api/: pyproject.toml
movie-lister-api/src/movie_lister_api/provider/: __init__.py  movie_provider.py
movie-lister-api/src/movie_lister_api/service/: __init__.py  movie_service.py
movie-lister-api/src/movie_lister_api/service/model/: movie.py
movie-lister-cli-app/: Makefile  main.py  pyproject.toml  settings.env
movie-lister-impl/: pyproject.toml
movie-lister-impl/src/movie_lister_impl/config/: __init__.py  config_container.py  csv_movie_config.py
movie-lister-impl/src/movie_lister_impl/provider/: __init__.py  csv_movie_provider_impl.py  provider_container.py
movie-lister-impl/src/movie_lister_impl/provider/entity/: movie_entity.py
movie-lister-impl/src/movie_lister_impl/service/: __init__.py  movie_service_impl.py  service_container.py
movie-lister-impl/tests/service/: test_movie_service.py
vrs-common/: pyproject.toml
vrs-common/src/vrs_common/: __init__.py  results.py
