[project]
name = "movie-lister-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Vincent Reynard Satyadharma", email = "vincent_reynard@hotmail.com" }
]
dependencies = [
    "pydantic>=2.10.3",
    "vrs-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
vrs-common = { path = "../vrs-common/dist/vrs_common-0.1.0-py3-none-any.whl" }
