[project]
name = "movie-lister-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Vincent Reynard Satyadharma", email = "vincent_reynard@hotmail.com" }
]
dependencies = [
    "dependency-injector>=4.44.0",
    "movie-lister-api",
    "pydantic-settings>=2.6.1",
    "vrs-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.uv.sources]
vrs-common = { path = "../vrs-common/dist/vrs_common-0.1.0-py3-none-any.whl" }
movie-lister-api = { path = "../movie-lister-api/dist/movie_lister_api-0.1.0-py3-none-any.whl" }
